[package]
name = "silent-timelock-encryption-blueprint"
version = "0.1.0"
edition = "2021"
description = "A Tangle Blueprint for silent timelock encryption systems."
authors = ["Drew Stone <drewstone329@gmail.com>"]
license = "MIT OR Apache-2.0"
homepage = "https://tangle.tools"
repository = "https://github.com/tangle-network/silent-timelock-encryption-blueprint"
readme = "README.md"
categories = ["cryptography", "cryptography::cryptocurrencies"]
keywords = ["tangle", "blueprint", "avs"]
rust-version = "1.81"

[dependencies]
tracing = "0.1"
async-trait = "0.1"
color-eyre = "0.6"
round-based = { version = "0.3.2", features = ["runtime-tokio"] }
sp-core = { version = "31.0.0", default-features = false }
serde = { version = "1.0.215", features = ["derive"] }
structopt = "0.3.26"
tokio = { version = "^1", default-features = false, features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["parking_lot", "env-filter"] }
k256 = { version = "0.13.3", default-features = false }

# Silent Threshold Encryption dependencies
silent-threshold-encryption = { git = "https://github.com/guruvamsi-policharla/silent-threshold-encryption.git" }
ark-std = { version = "0.5.0" }
ark-ec = { version = "0.5.0" }
ark-ff = { version = "0.5.0" }
ark-poly = { version = "0.5.0" }
ark-bls12-381 = { version = "0.5.0" }
ark-bn254 = { version = "0.5.0" }
ark-serialize = { version = "0.5.0" }
thiserror = "2.0.3"
serde_json = "1.0.133"

# Alloy deps
alloy-primitives = "0.7.2"
alloy-provider = { version = "0.1", default-features = false, features = ["reqwest", "ws"] }
alloy-signer = { version = "0.1" }
alloy-signer-local = { version = "0.1" }
alloy-rpc-client = "0.7.2"
alloy-network = { version = "0.1" }
alloy-json-abi = "0.7.2"
alloy-sol-types = "0.7.2"
alloy-contract = { version = "0.1" }

[dependencies.gadget-sdk]
version = "0.5.1"
default-features = false
features = ["getrandom"]

[build-dependencies]
blueprint-metadata = "0.1.7"

[features]
default = ["std"]
std = ["gadget-sdk/std"]

[lib]
path = "src/lib.rs"

[[bin]]
name = "silent-timelock-encryption-blueprint"
path = "src/main.rs"

[package.metadata.blueprint]
manager = { Evm = "HelloBlueprint" }

[[package.metadata.gadget.Native.sources]]
owner = "tangle-network"
repo = "silent-timelock-encryption-blueprint"
tag = "0.1.0"
binaries = [
    { arch = "Amd64", os = "Linux", name = "amd64-linux-silent-timelock-encryption-blueprint-gadget" },
    { arch = "Arm64", os = "Linux", name = "arm64-linux-silent-timelock-encryption-blueprint-gadget" },
]
