[package]
name = "silent-timelock-encryption-blueprint"
version = "0.1.0"
edition = "2021"
description = "A Tangle Blueprint for silent timelock encryption systems."
authors = ["Drew Stone <drewstone329@gmail.com>"]
license = "MIT OR Apache-2.0"
homepage = "https://tangle.tools"
repository = "https://github.com/tangle-network/silent-timelock-encryption-blueprint"
readme = "README.md"
categories = ["cryptography", "cryptography::cryptocurrencies"]
keywords = ["tangle", "blueprint", "avs"]
rust-version = "1.81"

[dependencies]
blueprint-sdk = { git = "https://github.com/tangle-network/gadget.git", branch = "drew/blueprint_summation_protocol_tests", features = [
    "std",
    "evm",
    "macros",
    "tangle",
    "networking",
    "local-store",
    "round-based-compat",
    "networking-sp-core-ecdsa"
] }
gadget-crypto = { git = "https://github.com/tangle-network/gadget.git", branch = "drew/blueprint_summation_protocol_tests", features = [
    "hashing",
] }

color-eyre = { version = "0.6", features = ["tracing-error", "color-spantrace"] }
hex = { version = "0.4.3", default-features = false }
itertools = "0.13.0"
round-based = { version = "0.4.1", features = ["runtime-tokio", "derive"] }
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.133"
structopt = "0.3.26"
thiserror = "2.0.3"
tracing = "0.1.41"


# Silent Threshold Encryption dependencies
k256 = { version = "0.13.3", default-features = false }
silent-threshold-encryption = { git = "https://github.com/guruvamsi-policharla/silent-threshold-encryption.git" }
ark-std = { version = "0.5.0" }
ark-ec = { version = "0.5.0" }
ark-ff = { version = "0.5.0" }
ark-poly = { version = "0.5.0" }
ark-bls12-381 = { version = "0.5.0" }
ark-bn254 = { version = "0.5.0" }
ark-serialize = { version = "0.5.0" }
rand = "0.8.1"

[dev-dependencies]
proptest = { version = "1.5.0", default-features = false, features = ["std", "bit-set", "fork", "timeout"] }
test-strategy = { version = "0.4.0", default-features = false }
round-based = { version = "0.4.1", default-features = false, features = ["derive", "sim"] }
blueprint-sdk = { git = "https://github.com/tangle-network/gadget.git", branch = "drew/blueprint_summation_protocol_tests", features = [
    "std",
    "evm",
    "tangle",
    "testing"
] }
gadget-crypto-tangle-pair-signer = { git = "https://github.com/tangle-network/gadget.git", branch = "drew/blueprint_summation_protocol_tests", features = ["evm"] }
color-eyre = { version = "0.6", features = ["capture-spantrace", "track-caller"] }
tokio = { version = "1.43.0", features = ["test-util"] }

[build-dependencies]
blueprint-sdk = { git = "https://github.com/tangle-network/gadget.git", branch = "drew/blueprint_summation_protocol_tests", features = ["build"] }

[features]
default = ["std"]
std = ["blueprint-sdk/std"]

[lib]
path = "src/lib.rs"

[[bin]]
name = "silent-timelock-encryption-blueprint"
path = "src/main.rs"

[package.metadata.blueprint]
manager = { Evm = "SilentTimelockEncryptionBlueprint" }
